package asc.portfolio.ascSb.user.domain;

public enum UserRoleType {
    USER,
    ADMIN
}
