package asc.portfolio.ascSb.user.exception;

public class UnknownUserException extends RuntimeException {
}
